# cmdsec-ml

./: .gitignore  Cargo.toml  README.md  dataset.json  features.csv
.github/workflows/: rust.yml
artifacts/baseline-v1/features/: test_features.csv  train_features.csv
artifacts/baseline-v1/notes/: BASELINE-V1.md
artifacts/baseline-v1/predictions/: test_predictions_combined.csv
docs/: experiment-notes.md
src/: dataset.rs  features.rs  main.rs  ml.rs  rules.rs
