[package]
name = "cmdsec-ml"
version = "0.1.0"
edition = "2024"
description = "Detection of obfuscated command-line payloads using rule-based and ML approaches"
license = "MIT"
repository = "https://github.com/pavan2318/cmdsec-ml"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
ndarray = "0.16"
linfa = "0.8.1"
linfa-logistic = "0.8.1"
